k8s/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  namespace: flask-app
  labels:
    app: flask-app
    version: blue
spec:
  type: NodePort
  selector:
    app: flask-app
    version: blue
  ports:
  - port: 8080
    targetPort: 5000
    nodePort: 30808
    protocol: TCP
    name: http
