k8s/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service
  namespace: flask-app
  labels:
    app: flask-app
    version: green
spec:
  type: NodePort
  selector:
    app: flask-app
    version: green
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30081
    protocol: TCP
    name: http
